# mcp-academic-rag-server

./: .actrc  .dockerignore  .env.example  .gitignore  .project_cache.json  ANALYSIS_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_STRATEGY.md  Dockerfile  Dockerfile.simple  FINAL_REGRESSION_TEST_SUMMARY.md  FUNCTIONAL_TEST_PROGRESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_REPORT.md  PROJECT_CONTEXT.md  PROJECT_INDEX.md  PROJECT_REFACTORING_PRD.md  PROJECT_REFACTORING_WORKFLOW_DETAILED.md  PROJECT_REFACTORING_WORKFLOW_ROADMAP.md  PROJECT_REFACTORING_WORKFLOW_TASKS.md  PROJECT_STRUCTURE.md  QUALITY_GATES_REPORT.md  QUICK_INSTALL.md  README.md  README.md.bak  README_FOCUSED.md  REFOCUSING_SUMMARY.md  REGRESSION_TEST_REPORT.md  ROADMAP_REFOCUSED.md  SCOPE_ASSESSMENT.md  SETUP_SIMPLIFIED.md  SETUP_UVX.md  TASK_DEPENDENCY_GRAPH.md  WORKFLOW_TESTING_VALIDATION.md  __init__.py  app.py  claude_desktop_config.example.json  (+28 more)
.claude/: ports.txt  settings.json
.claude/commands/: test-ci.md  test-quick.md  test-with-trap.md
.claude/hooks/: cleanup.sh
.github/workflows/: ci-test-only.yml  ci.yml  docs.yml  vector-storage-tests.yml
cli/: README.md  chat_cli.py  document_cli.py
config/: claude_desktop_config.example.json  config.development.json  config.json  config.json.example  config.production.json  config.test.json  milvus.yaml  processor_mappings.json
config/claude/: claude_desktop_config.example.json  claude_desktop_config_sdk.json  claude_desktop_config_uvx.json
connectors/: __init__.py  anthropic_connector.py  api_connector.py  base_llm_connector.py  google_connector.py  haystack_llm_connector.py  llm_factory.py  openai_connector.py
core/: __init__.py  alerting_system.py  config_center.py  config_environment_manager.py  config_manager.py  config_migration_tool.py  config_runtime_validator.py  config_validator.py  config_version_manager.py  monitoring_dashboard.py  performance_monitor.py  pipeline.py  processor_loader.py  server_context.py  telemetry_integration.py  workflow_effort_calculator.py  workflow_formatter.py  workflow_generator.py  workflow_models.py
docs/: Makefile  api-documentation-system.md  api-rag-pipeline.md  api-reference.md  architecture-overview.md  conf.py  developer-guide-enhanced.md  developer-guide.md  docstring-standards.md  index.rst  mcp-server-usage-guide.md  multi-model-setup-guide.md  openapi.yaml  quickstart-guide.md  requirements-docs.txt  user-guide.md  vector-storage-implementation.md  workflow-command-design.md
docs/_static/: custom.css
docs/archived/: WORKFLOW_CORE_IMPLEMENTATION.md  WORKFLOW_SCOPE_REDUCTION.md  WORKFLOW_UVX_MIGRATION.md
docs/user-guide/: mcp-tools-reference.md
document_stores/: __init__.py  haystack_store.py  milvus_store.py  vector_store_factory.py
document_stores/implementations/: __init__.py  base_vector_store.py  faiss_vector_store.py  haystack_store.py  memory_vector_store.py  milvus_store.py
document_stores/migration/: __init__.py  vector_migration.py
examples/: README.md  batch_processing_example.py  chat_session_example.py  config_center_demo.py  document_processing_example.py  interactive_chat_example.py  knowledge_graph_example.py  workflow_command_demo.py
examples/workflow_outputs/: detailed.md  roadmap.md  sample_prd.md  sample_roadmap.md  sample_tasks.md  tasks.md  workflow_summary.md
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
models/: __init__.py  document.py  process_result.py
processors/: __init__.py  base_processor.py  classification_processor.py  format_converter.py  haystack_embedding_processor.py  knowledge_graph_processor.py  ocr_processor.py  pre_processor.py  structure_processor.py
rag/: __init__.py  chat_session.py  haystack_pipeline.py  prompt_builder.py
reports/: mcp_detailed_test_report.json  mcp_inspector_test_report.json  structure_validation.md
retrievers/: haystack_retriever.py
scripts/: cleanup_test_env.py  kill_all_test_processes.py  publish_to_pypi.py  run-test.sh  run_tests.py  run_tests_clean.py  validate_structure.py
servers/: README.md  mcp_server_config_center.py  mcp_server_enhanced.py  mcp_server_minimal.py  mcp_server_sdk.py  mcp_server_secure.py  mcp_server_simple.py  mcp_server_standalone.py
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  about.html  base.html  chat.html  documents.html  index.html  upload.html
test-documents/: machine-learning.txt  neural-networks.txt  nlp-research.txt  research-paper-sample.txt
test_reports/: README.md  document_pipeline_test_20250815_163418.json  mcp_server_tools_test_20250815_162652.json  multi_llm_test_20250815_162408.json  rag_complete_test_20250815_160158.json  vector_storage_test_20250815_162137.json
test_reports/integration/: multi_model_test_report.md
tests/: README.md  conftest.py  simple_test_runner.py  test_chat_cli.py  test_document_cli.py  test_integration.py  test_placeholder.py  test_refactored_components.py
tests/component/: test_placeholder_component.py  test_processing_pipeline.py  test_rag_system.py
tests/e2e/: test_rag_workflow.py  test_web_ui.py
tests/integration/: test_automated_testing.py  test_config_system_integration.py  test_hybrid_retrieval.py  test_milvus_persistence.py  test_monitoring_integration.py  test_multi_model_integration.py  test_placeholder_integration.py  test_rag_integration.py  test_vector_storage_integration.py
tests/manual/: test_detailed_report_generator.py  test_mcp_inspector_simulation.py  test_mode_comparison.py  test_rag_comprehensive.py  test_rag_retrieval_validation.py  test_single_rag_query.py
tests/performance/: test_async_performance.py  test_vector_storage_benchmark.py
tests/temp_root_tests/: test_circular_dependency_fix.py  (+4 more)
tools/: basic_health_check.py  health_check.py  system_health_check.py  validate_config.py
utils/: error_handling.py  image_utils.py  logging_utils.py  monitoring_utils.py  performance_enhancements.py  performance_utils.py  security_enhancements.py  security_utils.py  text_utils.py  vector_utils.py
(+25 files in other folders)
